@@ -12,26 +12,13 @@
 general information; below you will find GCJ-specific details.</p>
 
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Project Ideas
- </th>
-</tr>
-</table>
-<br />
+<h2>Project Ideas</h2>
 
 <p>We've started maintaining a list of <a href="projects.html">useful
 projects</a>.</p>
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Coding Standards
- </th>
-</tr>
-</table>
-<br />
+
+<h2>Coding Standards</h2>
 
   <p>We follow the <a href="../codingconventions.html">GCC Coding
   Conventions</a> with some extrapolations concerning Java programming
@@ -51,14 +38,7 @@ projects</a>.</p>
   </ul>
 
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Submitting Patches
- </th>
-</tr>
-</table>
-<br />
+<h2>Submitting Patches</h2>
 
   <p>Send libgcj patches to <a
   href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>.
@@ -68,17 +48,10 @@ projects</a>.</p>
   directory &mdash; should be sent to the <a
   href="mailto:gcc-patches@gcc.gnu.org">gcc-patches</a> list.</p>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-  <a name="Testing">Testing</a>
- </th>
-</tr>
-</table>
-<br />
 
-  We're accepting test case patches.<br />
+<h2><a name="Testing">Testing</a></h2>
+
+<p>We're accepting test case patches.</p>
 
 <ul>
   <li>Put the <tt>.java</tt> file in
