@@ -1,3 +1,8 @@
+2011-04-25  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* contrib.html: Use regular <h2> markup for section headers
+	instead of fake tables.
+
 2010-09-19  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* news.html (December 9, 2000): Adjust fastjar URL.
